change css of bottom nav

--- a/portfolio/templates/base.html
+++ b/portfolio/templates/base.html
@@ -48,7 +48,7 @@
           padding:30px 0 100px 0;
         }
         #xx {
-          background-color: rgba(255,255,255);
+          background-color: white;
         }
         #builderImg {
           width:100%;
