--- a/portfolio/templates/base.html
+++ b/portfolio/templates/base.html
@@ -77,7 +77,7 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav ml-auto">
             <a class="nav-link" href="https://linkedin.com/in/mikehettesheimer" target="_blank">LinkedIn</a>
-            <a class="nav-link" href="assets/resume.pdf" target="_blank">Resume</a>
+            <a class="nav-link" href="{% static  'Resume.pdf' %}" target="_blank">Resume</a>
             <a class="nav-item nav-link" href="/blog">Blog</a>
           </div>
         </div>
