--- a/portfolio/templates/base.html
+++ b/portfolio/templates/base.html
@@ -47,7 +47,7 @@
         }
         .tall {
           min-height: 100%;
-          padding:30px 0 100px 0;
+          padding:30px 0 60px 0;
         }
         #xx {
           background-color: white;
@@ -59,7 +59,7 @@
           width: 100%;
         }
         footer {
-          height: 100px;
+          height: 120px;
         }
         .icon {
           height: 50px;
@@ -67,7 +67,7 @@
     </style>
   </head>
 
-  <body class="scrollspy-example" data-spy="scroll" data-target="#xx">
+  <body class="scrollspy" data-spy="scroll" data-target="#xx">
 
       <nav id = "nav" class="navbar navbar-expand-lg navbar-dark border-bottom border-dark shadow-sm">
         <a class="navbar-brand" href="/"><span class="border rounded p-2 border-white">MH</span></a>
@@ -85,13 +85,6 @@
       {% block content %}
       {% endblock %}
 
-    <footer class="text-muted">
-      <div id = "copyright" class="container text-center">
-        <p>
-          © Mike Hettesheimer {% now 'Y' %}
-        </p>
-      </div>
-    </footer>
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
