Change padding of bottom nav

--- a/portfolio/templates/base.html
+++ b/portfolio/templates/base.html
@@ -64,6 +64,9 @@
         .icon {
           height: 50px;
         }
+        .nav-link {
+          padding: .5rem .5rem!important;
+        }
     </style>
   </head>
 
