Change bottom nav alignment for mobile

--- a/jobs/templates/jobs/home.html
+++ b/jobs/templates/jobs/home.html
@@ -29,7 +29,7 @@
       </section>
 
       <nav class="nav fixed-bottom navbar navbar-light" id="xx">
-        <nav class="nav nav-pills ml-auto">
+        <nav id = "navfooter" class="nav nav-pills ml-auto">
           <a class="nav-link" href="#builder">Builder</a>
 
           <a class="nav-link" href="#leader">Pacesetter</a>
