--- a/portfolio/templates/base.html
+++ b/portfolio/templates/base.html
@@ -67,6 +67,11 @@
         .nav-link {
           padding: .5rem .5rem!important;
         }
+        @media (max-width: 768px) {
+          #navfooter {
+             margin: 0 auto;
+           }
+         }
     </style>
   </head>
 
