Fix spacing and spelling

--- a/jobs/templates/jobs/home.html
+++ b/jobs/templates/jobs/home.html
@@ -80,7 +80,7 @@
               </div>
               <div class="col-md-8">
                 <p>
-                  I belive in leading by example.  I was lucky enough to have really good mentors early in my career that never lectured me but
+                  I believe in leading by example.  I was lucky enough to have really good mentors early in my career that never lectured me but
                   let me ask questions and learn from their example.  I learned the value of taking personal pride in my work, not being afraid to do things
                   I hadn't done before and being open and honest with my boss.  It's also really important for people on the team to see directors
                   working as hard if not harder than they are.
@@ -91,8 +91,8 @@
                   can focus on the important work they're doing.
                 </p>
                 <p>
-                  It's also important to be involved in the success and growth of individual team members.  It's important as a manager
-                  to understand what motivates each team member and what they're looking to get out of their job.  I like to have
+                  It's also important to be involved in the growth of individual team members and understand what
+                  motivates them and what they're looking to get out of their work.  I like to have
                   weekly one on ones with team members and weekly meetings with the teams on progress on our goals.
                 </p>
               </div>
@@ -112,8 +112,8 @@
               <img src="{% static 'hiring.jpg' %}" alt="" class="mr-2 rounded icon" >
               <p class="media-body pb-3 mb-0 small lh-125 border-bottom border-gray">
                 <strong class="d-block text-gray-dark">Hiring & Management</strong>
-                <span>Software: Glassdoor | Google Hire | jazz HR | G Suite | Slack</span><br>
-                <span>Hiring and retaining talent is a great responsiblity and key to every great company's success.
+                <span class="addHeight">Software: Glassdoor | Google Hire | jazz HR | G Suite | Slack</span><br>
+                <span>Hiring and retaining talent is a great responsibility and key to every great company's success.
                   From writing job specs and putting together interview kits, to setting up career development and
                   tracking goals, keeping a talented team motivated and growing is something I really enjoy.
                 </span>
@@ -124,10 +124,10 @@
               <img src="{% static 'execution.jpg' %}" alt="" class="mr-2 rounded icon" >
               <p class="media-body pb-3 mb-0 small lh-125 border-bottom border-gray">
                 <strong class="d-block text-gray-dark">Execution</strong>
-                <span>Software: JIRA | Confluence | Clubhouse.io | Trello</span><br>
+                <span class="addHeight">Software: JIRA | Confluence | Clubhouse.io | Trello</span><br>
                 <span>Shipping product is about the team executing on it's plan and it takes a strong partnership of product, design and
                   engineering.  The bar must be set high by leadership and with the right people, who own the goals and planning/communication, great
-                  product can be consistenly shipped.
+                  product can be consistently shipped.
                 </span>
               </p>
             </div>
@@ -137,8 +137,8 @@
               <img src="{% static 'analytics.jpg' %}" alt="" class="mr-2 rounded icon" >
               <p class="media-body pb-3 mb-0 small lh-125 border-bottom border-gray">
                 <strong class="d-block text-gray-dark">Product Analytics</strong>
-                <span>Software & Skills: | SQL | Google Analytics | Mixpanel | Hotjar</span><br>
-                <span>That which is measured, improves.  Analytics requires a lot of thoughful planning and dedication but when it's
+                <span class="addHeight">Software & Skills: | SQL | Google Analytics | Mixpanel | Hotjar</span><br>
+                <span>That which is measured, improves.  Analytics requires a lot of thoughtful planning and dedication but when it's
                 right, it's an incredible tool to understand your customers and track the success of your efforts.</span>
               </p>
             </div>
@@ -146,7 +146,7 @@
               <img src="{% static 'tech.jpg' %}" alt="" class="mr-2 rounded icon" >
               <p class="media-body pb-3 mb-0 small lh-125 border-bottom border-gray">
                 <strong class="d-block text-gray-dark">Technical</strong>
-                <span>Software & Skills: Unix | Charles Web Proxy | Git | iOS | XCode | Technical Troubleshooting | PHP/Python (Limited) | HTML | CSS | Bootstrap</span><br>
+                <span class="addHeight">Software & Skills: Unix | Charles Web Proxy | Git | iOS | XCode | Technical Troubleshooting | PHP/Python (Limited) | HTML | CSS | Bootstrap</span><br>
                 <span>I've been lucky to work with some very technical and generous development teams over the years and learned a great deal about how modern web and mobile
                   apps work under the hood.  My time in software testing has also given me a lot of experience in troubleshooting which has come in
                    handy in launching products and releases.  I used my job search and building this website as an opportunity to learn how to use Django Web Framework,
@@ -157,7 +157,7 @@
               <img src="{% static 'design.jpg' %}" alt="" class="mr-2 rounded icon" >
               <p class="media-body pb-3 mb-0 small lh-125 border-bottom border-gray">
                 <strong class="d-block text-gray-dark"> Design & UX</strong>
-                <span>Software: Photoshop | Invision | Sketch | Balsamiq</span><br>
+                <span class="addHeight">Software: Photoshop | Invision | Sketch | Balsamiq</span><br>
                 <span>In the early days of JOOR we didn't always have a dedicated design or UX team members so the PM team learned to work within the design & UX guidelines
                 we had to continue to ship product.
                 Over time we brought on full time designers & UX team members to have an equal footing with product and engineering in developing our
