--- a/portfolio/templates/base.html
+++ b/portfolio/templates/base.html
@@ -71,6 +71,9 @@
           #navfooter {
              margin: 0 auto;
            }
+          .addHeight {
+            display: block;
+          }
          }
     </style>
   </head>
